#2 用户信息管理

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -9,4 +9,9 @@
         <!--<item name="windowNoTitle">true</item>-->
     </style>
 
+    <style name="AppTheme.NoTitle" parent="AppTheme">
+        <!-- Customize your theme here. -->
+        <item name="windowNoTitle">true</item>
+    </style>
+
 </resources>
