--- a/app/src/main/res/layout/activity_teacher_main.xml
+++ b/app/src/main/res/layout/activity_teacher_main.xml
@@ -14,14 +14,7 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/navigation" >
-
-        <fragment
-            android:id="@+id/teacher_main_fragment"
-            android:name="com.corkili.learningclient.ui.fragment.UserFragment"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            tools:layout="@layout/fragment_user" />
+        app:layout_constraintBottom_toTopOf="@id/navigation">
 
     </FrameLayout>
 
@@ -31,11 +24,12 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="0dp"
         android:layout_marginEnd="0dp"
-        android:background="@color/colorWhite"
+        android:background="?android:attr/windowBackground"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:menu="@menu/navigation" />
+        app:labelVisibilityMode="labeled"
+        app:menu="@menu/teacher_navigation" />
 
 
 </android.support.constraint.ConstraintLayout>
