--- a/app/src/main/res/menu/teacher_navigation.xml
+++ b/app/src/main/res/menu/teacher_navigation.xml
@@ -3,19 +3,19 @@
 
     <item
         android:id="@+id/navigation_course_manager"
-        android:title="课程" />
+        android:title="@string/navigation_course" />
 
     <item
         android:id="@+id/navigation_question_manager"
-        android:title="试题" />
+        android:title="@string/navigation_question" />
 
     <item
         android:id="@+id/navigation_message_manager"
-        android:title="消息" />
+        android:title="@string/navigation_message" />
 
     <item
         android:id="@+id/navigation_user_info"
         android:checked="true"
-        android:title="我的" />
+        android:title="@string/navigation_user_info" />
 
 </menu>
