#2 教师端-创建课程

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,6 @@
     <color name="colorDefaultText">#000000</color>
     <color name="colorBlack">#000000</color>
     <color name="colorWhite">#FFFFFF</color>
+    <color name="Red">#FF0000</color>
+    <color name="Green">#00FF00</color>
 </resources>
