--- a/app/src/main/res/menu/teacher_course_manage_menu.xml
+++ b/app/src/main/res/menu/teacher_course_manage_menu.xml
@@ -6,5 +6,6 @@
     <item android:id="@+id/menu_item_course_forum" android:title="论坛" />
     <item android:id="@+id/menu_item_course_work" android:title="作业" />
     <item android:id="@+id/menu_item_course_exam" android:title="考试" />
+    <item android:id="@+id/menu_item_course_subscription" android:title="订阅"/>
 
 </menu>
