--- a/app/src/main/res/layout/dialog_add_topic.xml
+++ b/app/src/main/res/layout/dialog_add_topic.xml
@@ -4,10 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.activity.CourseCommentActivity">
-
+    tools:context=".ui.activity.ForumTopicActivity">
+    
     <LinearLayout
-        android:id="@+id/rating_layout"
+        android:id="@+id/title_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
@@ -20,31 +20,27 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <TextView
-            android:id="@+id/text_view_rating"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="评分"
+            android:id="@+id/text_view_title"
+            android:text="标题"
             android:gravity="center"
             android:textSize="24sp"
-            android:textStyle="bold" />
-
-        <RatingBar
-            android:id="@+id/rating_bar_comment"
+            android:textStyle="bold"
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_gravity="center"
-            android:numStars="5"
-            android:rating="3"
-            android:stepSize="1"
+            android:layout_height="wrap_content"/>
+
+        <EditText
+            android:id="@+id/text_edit_title"
+            android:ems="10"
+            android:inputType="textMultiLine"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
-            android:layout_marginLeft="20dp"
-            style="@android:style/Widget.DeviceDefault.RatingBar.Indicator"
-            android:isIndicator="false" />
+            android:layout_marginLeft="20dp" />
 
     </LinearLayout>
-
+    
     <LinearLayout
-        android:id="@+id/comment_layout"
+        android:id="@+id/description_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
@@ -54,10 +50,10 @@
         android:paddingTop="@dimen/activity_vertical_margin"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/rating_layout">
+        app:layout_constraintTop_toBottomOf="@id/title_layout">
 
         <TextView
-            android:id="@+id/text_view_comment"
+            android:id="@+id/text_view_description"
             android:text="评论"
             android:gravity="center"
             android:textSize="24sp"
@@ -66,7 +62,7 @@
             android:layout_height="wrap_content"/>
 
         <EditText
-            android:id="@+id/text_edit_comment"
+            android:id="@+id/text_edit_description"
             android:ems="10"
             android:inputType="textMultiLine"
             android:layout_width="match_parent"
