--- a/app/src/main/res/layout/dialog_add_topic.xml
+++ b/app/src/main/res/layout/dialog_add_topic.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.activity.ForumTopicActivity">
+    tools:context=".ui.activity.ForumActivity">
     
     <LinearLayout
         android:id="@+id/title_layout"
