--- a/app/src/main/res/layout/activity_course_work.xml
+++ b/app/src/main/res/layout/activity_course_work.xml
@@ -17,7 +17,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             app:layoutManager="android.support.v7.widget.LinearLayoutManager"
-            tools:context=".ui.activity.CourseCommentActivity"
+            tools:context=".ui.activity.CourseWorkActivity"
             tools:listitem="@layout/activity_course_work_list_item" />
 
     </android.support.v4.widget.SwipeRefreshLayout>
