--- a/app/src/main/res/layout/fragment_question_list_item.xml
+++ b/app/src/main/res/layout/fragment_question_list_item.xml
@@ -57,11 +57,24 @@
         app:layout_constraintLeft_toRightOf="@id/question_index"
         app:layout_constraintRight_toRightOf="parent"/>
 
+    <TextView
+        android:id="@+id/question_score"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/text_margin"
+        android:textAppearance="?attr/textAppearanceListItem"
+        android:text="question_score"
+        android:textSize="16sp"
+        android:textStyle="bold"
+        android:visibility="gone"
+        app:layout_constraintTop_toBottomOf="@id/question_simple_description"
+        app:layout_constraintRight_toRightOf="parent"/>
+
     <android.support.constraint.ConstraintLayout
         android:id="@+id/answer_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/question_simple_description"
+        app:layout_constraintTop_toBottomOf="@id/question_score"
         android:visibility="visible">
 
         <View
@@ -120,7 +133,7 @@
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/text_margin"
             android:textAppearance="?attr/textAppearanceListItem"
-            android:text="正确选项为(少选或错选不得分)：1,3,4"
+            android:text="question_answer"
             android:textSize="20sp"
             android:textStyle="bold"
             android:singleLine="false"
