--- a/app/src/main/res/layout/activity_message.xml
+++ b/app/src/main/res/layout/activity_message.xml
@@ -7,15 +7,20 @@
     tools:context=".ui.activity.MessageActivity">
 
     <android.support.v4.widget.SwipeRefreshLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/activity_message_swipe_refresh_layout">
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:id="@+id/activity_message_swipe_refresh_layout"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/line">
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/activity_message_list"
             android:name="com.corkili.learningclient.ui.activity.MessageActivity"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:focusableInTouchMode="false"
             app:layoutManager="android.support.v7.widget.LinearLayoutManager"
             tools:context=".ui.activity.MessageActivity"
             tools:listitem="@layout/activity_message_list_item" />
@@ -28,28 +33,31 @@
         android:layout_height="1dp"
         android:layout_marginTop="4dp"
         android:background="@color/colorBlack"
-        app:layout_constraintTop_toBottomOf="@id/activity_message_swipe_refresh_layout"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"/>
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/content_editor"/>
 
     <EditText
         android:id="@+id/content_editor"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:hint="输入回复内容"
         android:inputType="textMultiLine"
         android:singleLine="false"
         android:scrollHorizontally="false"
-        app:layout_constraintTop_toBottomOf="@id/line" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintRight_toLeftOf="@id/send_content"
+        app:layout_constraintLeft_toLeftOf="parent"/>
 
     <Button
         android:id="@+id/send_content"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="發送"
+        android:text="发送"
         android:textSize="18sp"
         android:textStyle="bold"
-        app:layout_constraintTop_toBottomOf="@id/content_editor"
-        app:layout_constraintRight_toRightOf="parent"/>
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        />
 
 </android.support.constraint.ConstraintLayout>
