--- a/app/src/main/res/layout/activity_student_course_detail.xml
+++ b/app/src/main/res/layout/activity_student_course_detail.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.activity.TeacherCourseManageActivity">
+    tools:context=".ui.activity.StudentCourseDetailActivity">
 
     <LinearLayout
         android:id="@+id/course_name_layout"
@@ -20,7 +20,7 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <TextView
-            android:id="@+id/course_manage_text_view_course_name"
+            android:id="@+id/course_detail_text_view_course_name"
             android:text="名称"
             android:gravity="center"
             android:textSize="24sp"
@@ -29,7 +29,43 @@
             android:layout_height="wrap_content"/>
 
         <TextView
-            android:id="@+id/course_manage_text_edit_course_name"
+            android:id="@+id/course_detail_text_edit_course_name"
+            android:ems="10"
+            android:scrollHorizontally="false"
+            android:singleLine="false"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="20dp"
+            android:layout_marginLeft="20dp"
+            android:textSize="24sp"
+            android:textStyle="bold" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/teacher_layout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:paddingBottom="@dimen/activity_vertical_margin"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"
+        android:paddingTop="@dimen/activity_vertical_margin"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/course_name_layout">
+
+        <TextView
+            android:id="@+id/course_detail_text_view_teacher"
+            android:text="老师"
+            android:gravity="center"
+            android:textSize="24sp"
+            android:textStyle="bold"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+
+        <TextView
+            android:id="@+id/course_detail_text_edit_teacher"
             android:ems="10"
             android:scrollHorizontally="false"
             android:singleLine="false"
@@ -53,10 +89,10 @@
         android:paddingTop="@dimen/activity_vertical_margin"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/course_name_layout">
+        app:layout_constraintTop_toBottomOf="@id/teacher_layout">
 
         <TextView
-            android:id="@+id/course_manage_text_view_tags"
+            android:id="@+id/course_detail_text_view_tags"
             android:text="标签"
             android:gravity="center"
             android:textSize="24sp"
@@ -65,7 +101,7 @@
             android:layout_height="wrap_content"/>
 
         <TextView
-            android:id="@+id/course_manage_text_edit_tags"
+            android:id="@+id/course_detail_text_edit_tags"
             android:ems="10"
             android:scrollHorizontally="false"
             android:singleLine="false"
@@ -80,7 +116,7 @@
     </LinearLayout>
 
     <LinearLayout
-        android:id="@+id/open_layout"
+        android:id="@+id/description_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
@@ -93,40 +129,7 @@
         app:layout_constraintTop_toBottomOf="@id/tags_layout">
 
         <TextView
-            android:id="@+id/course_manage_text_view_open"
-            android:text="是否开放"
-            android:gravity="center"
-            android:textSize="24sp"
-            android:textStyle="bold"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
-
-        <ImageView
-            android:id="@+id/course_manage_image_view_open"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            app:srcCompat="@drawable/ic_no_bk_red"
-            android:layout_marginStart="20dp"
-            android:layout_marginLeft="20dp">
-        </ImageView>
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/description_layout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:paddingBottom="@dimen/activity_vertical_margin"
-        android:paddingLeft="@dimen/activity_horizontal_margin"
-        android:paddingRight="@dimen/activity_horizontal_margin"
-        android:paddingTop="@dimen/activity_vertical_margin"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/open_layout">
-
-        <TextView
-            android:id="@+id/course_manage_text_view_description"
+            android:id="@+id/course_detail_text_view_description"
             android:text="描述"
             android:gravity="center"
             android:textSize="24sp"
@@ -135,7 +138,7 @@
             android:layout_height="wrap_content"/>
 
         <TextView
-            android:id="@+id/course_manage_text_edit_description"
+            android:id="@+id/course_detail_text_edit_description"
             android:ems="10"
             android:scrollHorizontally="false"
             android:singleLine="false"
@@ -144,6 +147,29 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
             android:layout_marginLeft="20dp"
+            android:textSize="24sp"
+            android:textStyle="bold" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/subscribe_layout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:paddingBottom="@dimen/activity_vertical_margin"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"
+        android:paddingTop="@dimen/activity_vertical_margin"
+        android:gravity="center"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/description_layout">
+
+        <Button
+            android:id="@+id/course_detail_button_subscribe"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:textSize="24sp"
             android:textStyle="bold" />
 
