--- a/app/src/main/res/layout/activity_question_list_item.xml
+++ b/app/src/main/res/layout/activity_question_list_item.xml
@@ -129,7 +129,7 @@
             android:textSize="20sp"
             android:textStyle="bold"
             android:singleLine="false"
-            app:layout_constraintLeft_toRightOf="@id/answer_text"
+            app:layout_constraintLeft_toRightOf="@id/question_description_text"
             app:layout_constraintTop_toBottomOf="@id/answer_text"
             app:layout_constraintRight_toRightOf="parent"/>
 
@@ -152,7 +152,7 @@
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:layout_margin="@dimen/text_margin"
-            app:layout_constraintLeft_toRightOf="@id/submit_answer_text"
+            app:layout_constraintLeft_toRightOf="@id/question_description_text"
             app:layout_constraintTop_toBottomOf="@id/submit_answer_text"
             app:layout_constraintRight_toRightOf="parent">
 
@@ -190,9 +190,34 @@
             android:textSize="20sp"
             android:textStyle="bold"
             android:singleLine="false"
-            app:layout_constraintLeft_toRightOf="@id/my_answer_text"
+            app:layout_constraintLeft_toRightOf="@id/question_description_text"
             app:layout_constraintTop_toBottomOf="@id/my_answer_text"
             app:layout_constraintRight_toRightOf="parent"/>
+
+        <TextView
+            android:id="@+id/check_answer_text"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/text_margin"
+            android:textAppearance="?attr/textAppearanceListItem"
+            android:text="批改（滑动选择分数）："
+            android:textSize="20sp"
+            android:textStyle="bold"
+            android:singleLine="false"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/my_answer" />
+
+        <LinearLayout
+            android:id="@+id/check_answer_layout"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:layout_margin="@dimen/text_margin"
+            app:layout_constraintLeft_toRightOf="@id/question_description_text"
+            app:layout_constraintTop_toBottomOf="@id/check_answer_text"
+            app:layout_constraintRight_toRightOf="parent">
+
+        </LinearLayout>
 
         <View
             android:id="@+id/line2"
@@ -200,7 +225,7 @@
             android:layout_height="3dp"
             android:layout_marginTop="4dp"
             android:background="@color/colorBlack"
-            app:layout_constraintTop_toBottomOf="@id/my_answer"
+            app:layout_constraintTop_toBottomOf="@id/check_answer_layout"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintBottom_toBottomOf="parent" />
