--- a/app/src/main/res/layout/activity_student_course_detail.xml
+++ b/app/src/main/res/layout/activity_student_course_detail.xml
@@ -153,6 +153,39 @@
     </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/scorm_layout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:paddingBottom="@dimen/activity_vertical_margin"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"
+        android:paddingTop="@dimen/activity_vertical_margin"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/description_layout">
+
+        <TextView
+            android:text="课件"
+            android:gravity="center"
+            android:textSize="24sp"
+            android:textStyle="bold"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+
+        <Button
+            android:id="@+id/course_detail_button_study_scorm"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="20dp"
+            android:layout_marginLeft="20dp"
+            android:text="学习课件"
+            android:textSize="24sp"
+            android:textStyle="bold" />
+
+    </LinearLayout>
+
+    <LinearLayout
         android:id="@+id/subscribe_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -164,7 +197,7 @@
         android:gravity="center"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/description_layout">
+        app:layout_constraintTop_toBottomOf="@id/scorm_layout">
 
         <Button
             android:id="@+id/course_detail_button_subscribe"
