--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -25,18 +25,17 @@
 
         <TextView
             android:id="@+id/text_view_phone"
+            style="@style/QDCommonTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="手机号"
-            android:gravity="center"
-            android:textSize="24sp"
-            android:textStyle="bold" />
+            android:gravity="center" />
 
         <EditText
             android:id="@+id/text_edit_phone"
+            style="@style/CommonEditText"
             android:hint="请输入手机号"
             android:text="18681255793"
-            android:ems="10"
             android:inputType="phone"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -60,18 +59,17 @@
 
         <TextView
             android:id="@+id/text_view_password"
+            style="@style/QDCommonTitle"
             android:text="密&#12288;码"
             android:gravity="center"
-            android:textSize="24sp"
-            android:textStyle="bold"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
 
         <EditText
             android:id="@+id/text_edit_password"
+            style="@style/CommonEditText"
             android:hint="请输入密码"
             android:text="123456"
-            android:ems="10"
             android:inputType="textPassword"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -95,10 +93,9 @@
 
         <TextView
             android:id="@+id/text_view_user_type"
+            style="@style/QDCommonTitle"
             android:text="类&#12288;型"
             android:gravity="center"
-            android:textSize="24sp"
-            android:textStyle="bold"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
 
@@ -112,20 +109,16 @@
 
             <RadioButton
                 android:id="@+id/user_type_teacher"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                style="@style/QDCommonTitle"
                 android:layout_weight="0.5"
                 android:text="老师"
-                android:textSize="24sp"
                 android:checked="true" />
 
             <RadioButton
                 android:id="@+id/user_type_student"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                style="@style/QDCommonTitle"
                 android:layout_weight="0.5"
-                android:text="学生"
-                android:textSize="24sp" />
+                android:text="学生" />
         </RadioGroup>
 
     </LinearLayout>
@@ -134,38 +127,39 @@
         android:id="@+id/button_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
+        android:weightSum="1"
+        android:orientation="horizontal"
         android:paddingBottom="@dimen/activity_vertical_margin"
         android:paddingLeft="@dimen/activity_horizontal_margin"
         android:paddingRight="@dimen/activity_horizontal_margin"
         android:paddingTop="@dimen/activity_vertical_margin"
         android:layout_alignParentStart="true"
         android:layout_alignParentLeft="true"
-        android:layout_below="@id/user_type_layout"
-        android:gravity="center" >
+        android:layout_below="@id/user_type_layout" >
 
-
-        <Button
+        <com.qmuiteam.qmui.widget.roundwidget.QMUIRoundButton
             android:id="@+id/button_login"
+            style="@style/QDRoundButtonStyle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="登录"
-            android:textSize="24sp"
             android:layout_marginStart="@dimen/login_activity_button_margin"
             android:layout_marginLeft="@dimen/login_activity_button_margin"
             android:layout_marginEnd="@dimen/login_activity_button_margin"
-            android:layout_marginRight="@dimen/login_activity_button_margin" />
+            android:layout_marginRight="@dimen/login_activity_button_margin"
+            android:layout_weight="0.5" />
 
-        <Button
+        <com.qmuiteam.qmui.widget.roundwidget.QMUIRoundButton
             android:id="@+id/button_to_register"
+            style="@style/QDRoundButtonStyle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="新用户注册"
-            android:textSize="24sp"
+            android:text="注册"
             android:layout_marginStart="@dimen/login_activity_button_margin"
             android:layout_marginLeft="@dimen/login_activity_button_margin"
             android:layout_marginEnd="@dimen/login_activity_button_margin"
-            android:layout_marginRight="@dimen/login_activity_button_margin" />
+            android:layout_marginRight="@dimen/login_activity_button_margin"
+            android:layout_weight="0.5" />
 
     </LinearLayout>
 
