--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -41,7 +41,8 @@
 
     <style name="QDtextAppearanceListItem">
         <item name="android:textColor">?attr/qmui_config_color_black</item>
-        <item name="android:textSize">18sp</item>
+        <item name="android:textSize">20sp</item>
+        <item name="android:textStyle">bold</item>
         <item name="android:background">?attr/qmui_s_list_item_bg_with_border_bottom_inset_left
         </item>
     </style>
@@ -49,6 +50,7 @@
     <style name="QDTextAppearanceListItemSmall">
         <item name="android:textColor">?attr/qmui_config_color_gray_4</item>
         <item name="android:textSize">16sp</item>
+        <item name="android:textStyle">bold</item>
         <item name="android:background">?attr/qmui_s_list_item_bg_with_border_bottom_inset_left
         </item>
     </style>
