--- a/app/src/main/res/layout/activity_message.xml
+++ b/app/src/main/res/layout/activity_message.xml
@@ -1,63 +1,76 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.qmuiteam.qmui.widget.QMUIWindowInsetLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ui.activity.MessageActivity">
 
-    <android.support.v4.widget.SwipeRefreshLayout
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:id="@+id/activity_message_swipe_refresh_layout"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/line">
-
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/activity_message_list"
-            android:name="com.corkili.learningclient.ui.activity.MessageActivity"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:focusableInTouchMode="false"
-            app:layoutManager="android.support.v7.widget.LinearLayoutManager"
-            tools:context=".ui.activity.MessageActivity"
-            tools:listitem="@layout/activity_message_list_item" />
-
-    </android.support.v4.widget.SwipeRefreshLayout>
-
-    <View
-        android:id="@+id/line"
+    <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:layout_marginTop="4dp"
-        android:background="@color/colorBlack"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/content_editor"/>
+        android:layout_height="match_parent"
+        android:layout_marginTop="?attr/qmui_topbar_height"
+        android:fitsSystemWindows="true">
 
-    <EditText
-        android:id="@+id/content_editor"
-        android:layout_width="0dp"
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toTopOf="@id/line">
+
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/activity_message_list"
+                android:name="com.corkili.learningclient.ui.activity.MessageActivity"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:focusableInTouchMode="false"
+                app:layoutManager="android.support.v7.widget.LinearLayoutManager"
+                tools:context=".ui.activity.MessageActivity"
+                tools:listitem="@layout/activity_message_list_item" />
+
+        </LinearLayout>
+
+        <View
+            android:id="@+id/line"
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_marginTop="20dp"
+            android:background="@color/colorBlack"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintBottom_toTopOf="@id/content_editor"/>
+
+        <EditText
+            android:id="@+id/content_editor"
+            style="@style/CommonEditText"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:hint="输入回复内容"
+            android:inputType="textMultiLine"
+            android:singleLine="false"
+            android:scrollHorizontally="false"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintRight_toLeftOf="@id/send_content"
+            app:layout_constraintLeft_toLeftOf="parent" />
+
+        <com.qmuiteam.qmui.widget.roundwidget.QMUIRoundButton
+            android:id="@+id/send_content"
+            style="@style/QDRoundButtonStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="发送"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintRight_toRightOf="parent" />
+
+    </android.support.constraint.ConstraintLayout>
+
+    <com.qmuiteam.qmui.widget.QMUITopBarLayout
+        android:id="@+id/topbar"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="输入回复内容"
-        android:inputType="textMultiLine"
-        android:singleLine="false"
-        android:scrollHorizontally="false"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintRight_toLeftOf="@id/send_content"
-        app:layout_constraintLeft_toLeftOf="parent"/>
+        android:fitsSystemWindows="true"/>
 
-    <Button
-        android:id="@+id/send_content"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="发送"
-        android:textSize="18sp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        />
+</com.qmuiteam.qmui.widget.QMUIWindowInsetLayout>
 
-</android.support.constraint.ConstraintLayout>
