--- a/app/src/main/res/layout/activity_question_edit_attach_choice_item.xml
+++ b/app/src/main/res/layout/activity_question_edit_attach_choice_item.xml
@@ -1,23 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingTop="@dimen/activity_vertical_margin">
 
-    <TextView
+    <ImageView
         android:id="@+id/choice_answer_delete"
-        android:text="×"
-        android:gravity="center"
-        android:textSize="30sp"
-        android:textStyle="bold"
+        android:layout_gravity="center"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_weight="0.1"/>
+        android:layout_weight="0.1"
+        app:srcCompat="@drawable/ic_delete_24dp"/>
 
     <EditText
         android:id="@+id/choice_answer_editor"
+        style="@style/CommonEditText"
         android:ems="10"
         android:hint="请输入选项内容"
         android:inputType="textMultiLine"
@@ -27,8 +27,6 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
         android:layout_marginLeft="10dp"
-        android:textSize="24sp"
-        android:textStyle="bold"
         android:layout_weight="0.8"/>
 
     <CheckBox
