--- a/app/src/main/res/layout/activity_question_edit_attach_multiple_filling.xml
+++ b/app/src/main/res/layout/activity_question_edit_attach_multiple_filling.xml
@@ -14,10 +14,9 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <TextView
+            style="@style/QDCommonDescription"
             android:text="请针对每一个空，填写一个及以上的标准答案，该空符合任意一个标准答案，即为正确（点击序号删除）："
             android:gravity="fill_horizontal"
-            android:textSize="20sp"
-            android:textStyle="bold"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
 
@@ -33,12 +32,12 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/multiple_filling_info_layout">
 
-        <Button
+        <com.qmuiteam.qmui.widget.roundwidget.QMUIRoundButton
             android:id="@+id/add_a_multiple_filling_answer"
+            style="@style/QDRoundButtonStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="增加一个新的空"
-            android:textSize="24sp"/>
+            android:text="新增一个填空"/>
 
     </LinearLayout>
 
