--- a/app/src/main/res/layout/activity_question_edit_attach_single_filling_item.xml
+++ b/app/src/main/res/layout/activity_question_edit_attach_single_filling_item.xml
@@ -1,17 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingTop="@dimen/activity_vertical_margin">
 
-    <TextView
+    <ImageView
         android:id="@+id/single_filling_answer_delete"
-        android:text="×"
-        android:gravity="center"
-        android:textSize="30sp"
-        android:textStyle="bold"
+        app:srcCompat="@drawable/ic_delete_24dp"
+        android:layout_gravity="center_vertical"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:clickable="true"
@@ -19,6 +18,7 @@
 
     <EditText
         android:id="@+id/single_filling_answer_editor"
+        style="@style/CommonEditText"
         android:ems="10"
         android:hint="请输入一个标准答案"
         android:inputType="textMultiLine"
@@ -28,7 +28,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
         android:layout_marginLeft="10dp"
-        android:textSize="24sp"
-        android:textStyle="bold" />
+        android:layout_marginRight="10dp"
+        android:layout_marginEnd="10dp" />
 
 </LinearLayout>
