--- a/app/src/main/res/layout/activity_question_edit_attach_multiple_filling_item.xml
+++ b/app/src/main/res/layout/activity_question_edit_attach_multiple_filling_item.xml
@@ -6,10 +6,9 @@
 
     <TextView
         android:id="@+id/multiple_filling_answer_index"
+        style="@style/QDCommonTitle"
         android:text="1"
         android:gravity="center"
-        android:textSize="30sp"
-        android:textStyle="bold"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/activity_vertical_margin"
@@ -42,12 +41,12 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/multiple_filling_answer_item_layout">
 
-        <Button
+        <com.qmuiteam.qmui.widget.roundwidget.QMUIRoundButton
             android:id="@+id/add_a_filling_answer_in_current_filling"
+            style="@style/QDRoundButtonStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="+"
-            android:textSize="24sp"/>
+            android:text="添加标准答案"/>
 
     </LinearLayout>
 
