--- a/app/src/main/res/layout/activity_question_edit_attach_single_filling.xml
+++ b/app/src/main/res/layout/activity_question_edit_attach_single_filling.xml
@@ -14,10 +14,9 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <TextView
+            style="@style/QDCommonDescription"
             android:text="请输入一个及以上的标准答案，符合任意一个标准答案，即为正确："
             android:gravity="fill_horizontal"
-            android:textSize="20sp"
-            android:textStyle="bold"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
 
@@ -47,12 +46,12 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/single_filling_answer_layout">
 
-        <Button
+        <com.qmuiteam.qmui.widget.roundwidget.QMUIRoundButton
             android:id="@+id/add_a_single_filling_answer"
+            style="@style/QDRoundButtonStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="+"
-            android:textSize="24sp"/>
+            android:text="添加标准答案"/>
 
     </LinearLayout>
 
