#6 课程管理界面

--- a/app/src/main/res/values/ids.xml
+++ b/app/src/main/res/values/ids.xml
@@ -19,4 +19,5 @@
     <item name="topbar_right_refresh" type="id"/>
     <item name="topbar_right_more" type="id"/>
     <item name="topbar_right_save" type="id"/>
+    <item name="topbar_right_edit" type="id"/>
 </resources>
