--- a/app/src/main/res/layout/fragment_message_list_item.xml
+++ b/app/src/main/res/layout/fragment_message_list_item.xml
@@ -48,7 +48,8 @@
         android:singleLine="false"
         android:maxLines="2"
         app:layout_constraintTop_toBottomOf="@id/item_message_number"
-        app:layout_constraintLeft_toLeftOf="parent" />
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"/>
 
     <TextView
         android:id="@+id/item_last_message_time"
